Some small css changes

--- a/app/features/graybear/about/about.tpl.html
+++ b/app/features/graybear/about/about.tpl.html
@@ -2,17 +2,18 @@
 
 <p>Hello my name is Paul Gray, I have been a <b>web developer</b> for the last 15 years.</p>
 
-<p>I am currently interested in the following technologies :</p>
+<p>I am currently interested in the following technologies:</p>
 
 <ul>
     <li>JavaScript</li>
     <li>AngularJS</li>
+    <li>Phonegap Apps</li>
     <li>NoSQL Databases (Mongo or Firebase)</li>
     <li>CSS and HTML5</li>
     <li>.Net MVC WebAPI</li>
 </ul>
 
-<p>Other things I know about include</p>
+<p>Some other things I know:</p>
 
 <ul>
     <li>.NET (VB, C#)</li>
