--- a/index.html
+++ b/index.html
@@ -44,27 +44,25 @@
     </div>
 
     <div class="heroArea">
-     
-            <h2>In the future the revolution will be downloaded.</h2>
+
+        <h2>In the future the revolution will be downloaded.</h2>
 
     </div>
-    
+
     <div class="container">
         <div class="inner">
 
-
-
             <div ui-view="mainView"></div>
-
             <footer></footer>
-            <script src="js/bootstrap.min.js"></script>
-
-            <script src="app/libs/angular/angular.min.js"></script>
-            <script src="app/libs/uiRouter/angular-ui-router.min.js"></script>
-
-            <script src="app/app.mdl.js"></script>
 
         </div>
     </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <script src="app/libs/angular/angular.min.js"></script>
+    <script src="app/libs/uiRouter/angular-ui-router.min.js"></script>
+
+    <script src="app/app.mdl.js"></script>
 </body>
 </html>
