--- a/app/features/graybear/home.tpl.html
+++ b/app/features/graybear/home.tpl.html
@@ -3,7 +3,7 @@
 
     <div class="col-sm-8">
 
-        <h2>Git Repositories</h2>
+        <h2>Git Projects</h2>
 
         <div class="panel panel-default">
             <div class="panel-heading">ngQueryString</div>
