Some more changes

--- a/app/features/graybear/about/about.tpl.html
+++ b/app/features/graybear/about/about.tpl.html
@@ -1,4 +1,9 @@
-﻿ <h2>Who <span style="text-decoration: line-through;">are</span> is GrayBear</h2>
+﻿ <h2>Who is GrayBear</h2>
+
+<div style="text-align:center">
+    <img src="images/paulgray.jpg" class="img-circle" />
+</div>
+
 
 <p>Hello my name is Paul Gray, I have been a <b>web developer</b> for the last 15 years.</p>
 
