--- a/app/features/graybear/collaberations/collaberations.tpl.html
+++ b/app/features/graybear/collaberations/collaberations.tpl.html
@@ -1,10 +1,12 @@
-﻿<h3>Collaboration Projects</h3>
+﻿<h3>Collaboration</h3>
+
+<p>I have been working on the following projects</p>
 
 <ul class="list-group">
     <li class="list-group-item active">
-        <h4 class="list-group-item-heading">GrumpyWizards-NgValidation</h4>
+        <h4 class="list-group-item-heading">NgValidation</h4>
         <p>A validation module for angular Js</p>
-        <a href="https://github.com/GrumpyWizards/ngValidation">NgValidation</a>
+        <a href="https://github.com/GrumpyWizards/ngValidation">NgValidation</a> with GrumpyWizards
     </li>
 </ul>
 <a ui-sref="graybear.contact.details">If you would like to work together get in touch</a>
