--- a/app/features/graybear/home.tpl.html
+++ b/app/features/graybear/home.tpl.html
@@ -6,7 +6,9 @@
         <h2>Git Projects</h2>
 
         <div class="panel panel-default">
-            <div class="panel-heading">ngQueryString</div>
+            <div class="panel-heading">
+                <h4>ngQueryString</h4>
+            </div>
             <div class="panel-body">
 
                 AngularJS module for using QueryString parameters in your application.
@@ -18,7 +20,9 @@
         </div>
 
         <div class="panel panel-default">
-            <div class="panel-heading">ColumnGridCSS</div>
+            <div class="panel-heading">
+                <h4>ColumnGridCSS</h4>
+            </div>
             <div class="panel-body">
 
                 CSS grid system for floating content, Chrome only, ALPHA (Very much work in progress).
