Sorted out branding and gt
gt is google tracking

--- a/app/features/graybear/about/about.tpl.html
+++ b/app/features/graybear/about/about.tpl.html
@@ -1,26 +1,43 @@
-﻿ <h2>Who is GrayBear</h2>
+﻿
+<h2>About GrayBear</h2>
 
-<div style="text-align:center">
-    <img src="images/paulgray.jpg" class="img-circle" />
+<div class="row">
+
+    <div class="col-md-6">
+        <div style="text-align:center">
+            <img src="images/paulgray.jpg" class="img-circle" />
+        </div>
+
+        <h4>Hello my name is Paul Gray, I have been a <b>web developer</b> for the last 15 years.</h4>
+    </div>
+
+
+    <div class="col-md-6">
+        <p>I am currently interested in the following technologies:</p>
+
+        <ul class="list-group">
+            <li class="list-group-item">JavaScript</li>
+            <li class="list-group-item">AngularJS</li>
+            <li class="list-group-item">Phonegap Apps</li>
+            <li class="list-group-item">NoSQL Databases (Mongo or Firebase)</li>
+            <li class="list-group-item">CSS and HTML5</li>
+            <li class="list-group-item">.Net MVC WebAPI</li>
+        </ul>
+
+        <p>Some other things I know:</p>
+
+        <ul class ="list-group">
+            <li class="list-group-item">.NET (VB, C#)</li>
+            <li class="list-group-item">SQL</li>
+            </ul>
+
+
 </div>
 
 
-<p>Hello my name is Paul Gray, I have been a <b>web developer</b> for the last 15 years.</p>
+</div>
 
-<p>I am currently interested in the following technologies:</p>
 
-<ul>
-    <li>JavaScript</li>
-    <li>AngularJS</li>
-    <li>Phonegap Apps</li>
-    <li>NoSQL Databases (Mongo or Firebase)</li>
-    <li>CSS and HTML5</li>
-    <li>.Net MVC WebAPI</li>
-</ul>
 
-<p>Some other things I know:</p>
 
-<ul>
-    <li>.NET (VB, C#)</li>
-    <li>SQL</li>
-</ul>
+
