--- a/app/features/graybear/collaberations/collaberations.tpl.html
+++ b/app/features/graybear/collaberations/collaberations.tpl.html
@@ -4,8 +4,8 @@
 
 <ul class="list-group">
     <li class="list-group-item active">
-        <h4 class="list-group-item-heading">NgValidation</h4>
-        <p>A validation module for angular Js</p>
+        <h4 class="list-group-item-heading">Ng-Validation</h4>
+        <p>A module to extend the validation methods for AngularJs</p>
         <a href="https://github.com/GrumpyWizards/ngValidation">NgValidation</a> with GrumpyWizards
     </li>
 </ul>
