--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>
-        GrayBearWB
+        GrayBear
     </title>
 </head>
 
@@ -28,14 +28,16 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">GrayBearWD</a>
+                        <a class="navbar-brand" href="#">GrayBear</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a ui-sref="graybear.home">Home</a></li>
+                            <li><a ui-sref="graybear.home">Home</a></li>
                             <li><a ui-sref="graybear.about">About</a></li>
                             <li><a ui-sref="graybear.contact.details">Contact</a></li>
+
                         </ul>
+                        <img class="img-logo img-circle" src="images/graybear-medium.png" />
                     </div>
                 </div>
             </div>
@@ -64,5 +66,18 @@
     <script src="app/libs/uiRouter/angular-ui-router.min.js"></script>
 
     <script src="app/app.mdl.js"></script>
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-50067327-1', 'graybear.github.io');
+        ga('send', 'pageview');
+    </script>
+
 </body>
 </html>
