--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <script src="app/libs/angular/angular.min.js"></script>
     <script src="app/libs/uiRouter/angular-ui-router.min.js"></script>
 
-    <script src="app/app.mdl.js"></script>
+    <script src="app/app.mdl.min.js"></script>
 
     <script>
         (function (i, s, o, g, r, a, m) {
