--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-
+    <meta name="viewport" content="initial-scale=1">
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <!--[if lt IE 9]>
