Added project ng-latlng

--- a/app/features/graybear/collaberations/collaberations.tpl.html
+++ b/app/features/graybear/collaberations/collaberations.tpl.html
@@ -6,7 +6,7 @@
     <li class="list-group-item active">
         <h4 class="list-group-item-heading">Ng-Validation</h4>
         <p>A module to extend the validation methods for AngularJs</p>
-        <a href="https://github.com/GrumpyWizards/ngValidation">NgValidation</a> with GrumpyWizards
+        <a href="https://github.com/GrumpyWizards/ngValidation">Ng-Validation</a> with GrumpyWizards
     </li>
 </ul>
 <a ui-sref="graybear.contact.details">If you would like to work together get in touch</a>
