--- a/app/features/graybear/projects/projects.tpl.html
+++ b/app/features/graybear/projects/projects.tpl.html
@@ -3,14 +3,28 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h4>ngQueryString</h4>
+        <h4>ng-LatLng</h4>
+    </div>
+    <div class="panel-body">
+
+        Harness the power of geo location without a maps api.
+
+        <a href="https://github.com/GrayBear/ngLatLng">
+            ng-LatLng
+        </a>
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>ng-QueryString</h4>
     </div>
     <div class="panel-body">
 
         AngularJS module for using QueryString parameters in your application.
 
         <a href="http://graybear.github.io/ngQueryString/">
-            ngQueryString
+            ng-QueryString
         </a>
     </div>
 </div>
