Adding some badges for status of the projets

--- a/app/features/graybear/projects/projects.tpl.html
+++ b/app/features/graybear/projects/projects.tpl.html
@@ -3,6 +3,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
+        <div class="project-status">Pre <br /> Alpha</div>
         <h4>ng-LatLng</h4>
     </div>
     <div class="panel-body">
@@ -17,6 +18,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
+        <div class="project-status">Production Ready</div>
         <h4>ng-QueryString</h4>
     </div>
     <div class="panel-body">
@@ -31,6 +33,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
+        <div class="project-status">Concept Only</div>
         <h4>ColumnGridCSS</h4>
     </div>
     <div class="panel-body">
