Adding a bit of colour to hero area.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
     </div>
 
     <div class="heroArea">
+        <div>
 
-        <h2>In the future the revolution will be downloaded.</h2>
+            <h2>In the future the revolution will be downloaded.</h2>
 
+        </div>
     </div>
 
     <div class="container">
