--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="heroArea">
         <div>
 
-            <h2>In the future the revolution will be downloaded.</h2>
+            <h2>In the future the revolution will be downloaded</h2>
 
         </div>
     </div>
