Some changes for about you

--- a/app/features/graybear/about/about.tpl.html
+++ b/app/features/graybear/about/about.tpl.html
@@ -1,9 +1,31 @@
-﻿
-<h2>About GrayBear</h2>
+﻿<div class="row">
 
-<div class="row">
 
     <div class="col-md-6">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Technologies of Interest</div>
+            <ul class="list-group">
+                <li class="list-group-item">JavaScript</li>
+                <li class="list-group-item">AngularJS</li>
+                <li class="list-group-item">Phonegap Apps</li>
+                <li class="list-group-item">NoSQL Databases (Mongo or Firebase)</li>
+                <li class="list-group-item">CSS and HTML5</li>
+                <li class="list-group-item">.Net MVC WebAPI</li>
+            </ul>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">Other things I know</div>
+            <ul class="list-group">
+                <li class="list-group-item">.NET (VB, C#)</li>
+                <li class="list-group-item">SQL</li>
+            </ul>
+        </div>
+    </div>
+
+
+    <div class="col-md-6">
+        <h2>About GrayBear</h2>
         <div style="text-align:center">
             <img src="images/paulgray.jpg" class="img-circle" />
         </div>
@@ -11,28 +33,6 @@
         <h4>Hello my name is Paul Gray, I have been a <b>web developer</b> for the last 15 years.</h4>
     </div>
 
-
-    <div class="col-md-6">
-        <p>I am currently interested in the following technologies:</p>
-
-        <ul class="list-group">
-            <li class="list-group-item">JavaScript</li>
-            <li class="list-group-item">AngularJS</li>
-            <li class="list-group-item">Phonegap Apps</li>
-            <li class="list-group-item">NoSQL Databases (Mongo or Firebase)</li>
-            <li class="list-group-item">CSS and HTML5</li>
-            <li class="list-group-item">.Net MVC WebAPI</li>
-        </ul>
-
-        <p>Some other things I know:</p>
-
-        <ul class ="list-group">
-            <li class="list-group-item">.NET (VB, C#)</li>
-            <li class="list-group-item">SQL</li>
-            </ul>
-
-
-</div>
 
 
 </div>
