upgrade to analytics

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-50067327-1', 'graybear.github.io');
+        ga('require', 'displayfeatures');
         ga('send', 'pageview');
     </script>
 
