Adding fights changing hero area

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <ul class="nav navbar-nav">
                             <li><a ui-sref="graybear.home">Home</a></li>
                             <li><a ui-sref="graybear.about">About</a></li>
+                            <li><a ui-sref="graybear.fight">Javascipt Fight</a></li>
                             <li><a ui-sref="graybear.contact.details">Contact</a></li>
 
                         </ul>
@@ -48,7 +49,7 @@
     <div class="heroArea">
         <div>
 
-            <h2>In the future the revolution will be downloaded</h2>
+            <h2>In the future the revolution will be <s>downloaded</s> deleted, its irrelevant</h2>
 
         </div>
     </div>
@@ -66,6 +67,10 @@
 
     <script src="app/libs/angular/angular.min.js"></script>
     <script src="app/libs/uiRouter/angular-ui-router.min.js"></script>
+
+
+    <script src="app/features/graybear/fight/fight.mdl.js"></script>
+    <script src="app/features/graybear/fight/list/fight.ctrl.js"></script>
 
     <script src="app/app.mdl.min.js"></script>
 
