Updates to fight to make it full screen

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <ul class="nav navbar-nav">
                             <li><a ui-sref="graybear.home">Home</a></li>
                             <li><a ui-sref="graybear.about">About</a></li>
-                            <li><a ui-sref="graybear.fight">Javascipt Fight</a></li>
+                            <li><a ui-sref="fight">Javascipt Fight</a></li>
                             <li><a ui-sref="graybear.contact.details">Contact</a></li>
 
                         </ul>
@@ -69,8 +69,8 @@
     <script src="app/libs/uiRouter/angular-ui-router.min.js"></script>
 
 
-    <script src="app/features/graybear/fight/fight.mdl.js"></script>
-    <script src="app/features/graybear/fight/list/fight.ctrl.js"></script>
+    <script src="app/features/fight/fight.mdl.js"></script>
+    <script src="app/features/fight/list/fight.ctrl.js"></script>
 
     <script src="app/app.mdl.min.js"></script>
 
